// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletPicker next is not rendered 1`] = `
<section
  className="WalletPicker"
>
  <div
    className="WalletPicker-Row"
  >
    <header
      className="WalletPicker-Currency"
    >
      GBP
    </header>
    <Memo()
      amount={20.5}
      autofocus={true}
      onChange={[Function]}
      prefix="-"
    />
  </div>
  <div
    className="WalletPicker-Row"
  >
    <span
      className="WalletPicker-Balance"
    >
      You have: 
      <Memo()
        amount={300}
        currency="GBP"
      />
    </span>
    <span
      className="WalletPicker-Rate"
    >
      <Memo()
        amount={1}
        currency="GBP"
      />
       = 
      <Memo()
        amount={0.8992}
        currency="USD"
      />
    </span>
  </div>
  <div
    className="WalletPicker-Row WalletPicker-WalletChanger"
  >
    <Memo()
      onClick={[Function]}
      text="← USD"
    />
    <span>
       
    </span>
  </div>
</section>
`;

exports[`WalletPicker prev is not rendered 1`] = `
<section
  className="WalletPicker"
>
  <div
    className="WalletPicker-Row"
  >
    <header
      className="WalletPicker-Currency"
    >
      GBP
    </header>
    <Memo()
      amount={20.5}
      autofocus={true}
      onChange={[Function]}
      prefix="-"
    />
  </div>
  <div
    className="WalletPicker-Row"
  >
    <span
      className="WalletPicker-Balance"
    >
      You have: 
      <Memo()
        amount={300}
        currency="GBP"
      />
    </span>
    <span
      className="WalletPicker-Rate"
    >
      <Memo()
        amount={1}
        currency="GBP"
      />
       = 
      <Memo()
        amount={0.8992}
        currency="USD"
      />
    </span>
  </div>
  <div
    className="WalletPicker-Row WalletPicker-WalletChanger"
  >
    <span>
       
    </span>
    <Memo()
      onClick={[Function]}
      text="EUR →"
    />
  </div>
</section>
`;

exports[`WalletPicker snapshot renders 1`] = `
<section
  className="WalletPicker"
>
  <div
    className="WalletPicker-Row"
  >
    <header
      className="WalletPicker-Currency"
    >
      GBP
    </header>
    <Memo()
      amount={20.5}
      autofocus={true}
      onChange={[Function]}
      prefix="-"
    />
  </div>
  <div
    className="WalletPicker-Row"
  >
    <span
      className="WalletPicker-Balance"
    >
      You have: 
      <Memo()
        amount={300}
        currency="GBP"
      />
    </span>
    <span
      className="WalletPicker-Rate"
    >
      <Memo()
        amount={1}
        currency="GBP"
      />
       = 
      <Memo()
        amount={0.8992}
        currency="USD"
      />
    </span>
  </div>
  <div
    className="WalletPicker-Row WalletPicker-WalletChanger"
  >
    <Memo()
      onClick={[Function]}
      text="← USD"
    />
    <span>
       
    </span>
    <Memo()
      onClick={[Function]}
      text="EUR →"
    />
  </div>
</section>
`;
